--- a/index.html
+++ b/index.html
@@ -4,94 +4,67 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Teclado | HTML + CSS + JS</title>
+		<title>Projeto Desafiador | HTML + CSS +</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css?family=Quicksand:500"
+			href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/style.css" />
-		<script src="/script.js"></script>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-    <div id="digitacao">
-			<div id=textoDigitacao">Clique para iniciar.</div>
-		</div>
-    <div class="container_teclado">
-      <div id="teclado">
-				<div id="teclado_fila_1" class="linha_teclado">
-          <!--essa tag eu descobri no site w3c é especifica para utilidades de teclado-->
-					<kbd class="tecla_especial" id="192">`</kbd>
-					<kbd class="tecla_especial" id="49">1</kbd>
-					<kbd class="tecla_especial" id="50">2</kbd>
-					<kbd class="tecla_especial" id="51">3</kbd>
-					<kbd class="tecla_especial" id="52">4</kbd>
-					<kbd class="tecla_especial" id="53">5</kbd>
-					<kbd class="tecla_especial" id="54">6</kbd>
-					<kbd class="tecla_especial" id="55">7</kbd>
-					<kbd class="tecla_especial" id="56">8</kbd>
-					<kbd class="tecla_especial" id="57">9</kbd>
-					<kbd class="tecla_especial" id="48">0</kbd>
-					<kbd class="tecla_especial" id="189">-</kbd>
-					<kbd class="tecla_especial" id="187">=</kbd>
-					<kbd class="longo tecla_operacao" id="8">del</kbd>
+		<section id="testeDeDigitacao">
+			<div id="caixaDeTexto">
+				<p id="digitando">
+					ha uma casa na beira do rio que tem sete salas em cada sala tem quatro
+					cantos e em cada canto tem um gato e mesmo que cada gato veja tres gatos me
+					diga quantos gatos tem nessa casa
+				</p>
+			</div>
+			<div id="teclado">
+				<div id="fila1">
+					<div id="113" class="tecla">Q</div>
+					<div id="119" class="tecla">W</div>
+					<div id="101" class="tecla">E</div>
+					<div id="114" class="tecla">R</div>
+					<div id="116" class="tecla">T</div>
+					<div id="121" class="tecla">Y</div>
+					<div id="117" class="tecla">U</div>
+					<div id="105" class="tecla">I</div>
+					<div id="111" class="tecla">O</div>
+					<div id="112" class="tecla">P</div>
 				</div>
-				<div id="teclado_fila_2" class="linha_teclado">
-					<kbd class="longo tecla_operacao" id="9">tab</kbd>
-					<kbd id="81">q</kbd>
-					<kbd id="87">w</kbd>
-					<kbd id="69">e</kbd>
-					<kbd id="82">r</kbd>
-					<kbd id="84">t</kbd>
-					<kbd id="89">y</kbd>
-					<kbd id="85">u</kbd>
-					<kbd id="73">i</kbd>
-					<kbd id="79">o</kbd>
-					<kbd id="80">p</kbd>
-					<kbd class="tecla_especial" id="219">[</kbd>
-					<kbd class="tecla_especial" id="221">]</kbd>
-					<kbd class="tecla_especial" id="220">\</kbd>
+				<div id="fila2">
+					<div id="97" class="tecla">A</div>
+					<div id="115" class="tecla">S</div>
+					<div id="100" class="tecla">D</div>
+					<div id="102" class="tecla">F</div>
+					<div id="103" class="tecla">G</div>
+					<div id="104" class="tecla">H</div>
+					<div id="106" class="tecla">J</div>
+					<div id="107" class="tecla">K</div>
+					<div id="108" class="tecla">L</div>
+					<div id="186" class="tecla">Ç</div>
 				</div>
-				<div id="teclado_fila_3" class="linha_teclado">
-					<kbd class="longo tecla_operacao" id="20">caps</kbd>
-					<kbd id="65">a</kbd>
-					<kbd id="83">s</kbd>
-					<kbd id="68">d</kbd>
-					<kbd id="70">f</kbd>
-					<kbd id="71">g</kbd>
-					<kbd id="72">h</kbd>
-					<kbd id="74">j</kbd>
-					<kbd id="75">k</kbd>
-					<kbd id="76">l</kbd>
-					<kbd class="tecla_especial" id="186">;</kbd>
-					<kbd class="tecla_especial" id="222">'</kbd>
-					<kbd class="longo tecla_operacao" id="13">return</kbd>
+				<div id="fila3">
+					<div id="122" class="tecla">Z</div>
+					<div id="120" class="tecla">X</div>
+					<div id="99" class="tecla">C</div>
+					<div id="118" class="tecla">V</div>
+					<div id="98" class="tecla">B</div>
+					<div id="110" class="tecla">N</div>
+					<div id="109" class="tecla">M</div>
 				</div>
-				<div id="teclado_fila_4" class="linha_teclado">
-					<kbd class="maior tecla_operacao" id="16">shift</kbd>
-					<kbd id="90">z</kbd>
-					<kbd id="88">x</kbd>
-					<kbd id="67">c</kbd>
-					<kbd id="86">v</kbd>
-					<kbd id="66">b</kbd>
-					<kbd id="78">n</kbd>
-					<kbd id="77">m</kbd>
-					<kbd class="tecla_especial" id="188">,</kbd>
-					<kbd class="tecla_especial" id="190">.</kbd>
-					<kbd class="tecla_especial" id="191">/</kbd>
-					<kbd class="maior tecla_operacao" id="16">shift</kbd>
-				</div>
-				<div id="teclado_fila_5" class="linha_teclado">
-					<kbd class="tecla_operacao" id="188">fn</kbd>
-					<kbd class="tecla_operacao" id="17">ctrl</kbd>
-					<kbd class="tecla_operacao" id="18">opt</kbd>
-					<kbd class="longo tecla_operacao" id="91">⌘</kbd>
-					<kbd class="barra_espaco tecla_operacao" id="32">&nbsp;</kbd>
-					<kbd class="longo tecla_operacao" id="91">⌘</kbd>
-					<kbd class="tecla_operacao" id="18">opt</kbd>
-					<kbd class="tecla_operacao" id="17">ctrl</kbd>
-					<kbd class="tecla_operacao" id="188">fn</kbd>
+				<div id="fila4">
+					<div id="32" class="teclaEsp"></div>
 				</div>
 			</div>
-    </div>
-  </body>
+			<div id="resultados">
+				<div id="acerto">Acertos: 0</div>
+				<div id="erro">Erros: 0</div>
+			</div>
+		</section>
+		<script src="script.js"></script>
+	</body>
 </html>
