--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/assets/style/style.css" />
 	</head>
 	<body>
 		<section id="testeDeDigitacao">
@@ -65,6 +65,6 @@
 				<div id="erro">Erros: 0</div>
 			</div>
 		</section>
-		<script src="script.js"></script>
+		<script src="/assets/script/main.js"></script>
 	</body>
 </html>
