feat: adicionando texto de instruções ✨

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 	</head>
 	<body>
 		<section id="testeDeDigitacao">
+			<div class="info">
+				<h1>Teclado interativo</h1>
+				<p>Para iniciar a digitação, use seu teclado físico.</p>
+				<p>
+					Toques em letras corretas computam um acerto, toques em letras incorretas
+					computam um erro.
+				</p>
+				<p>Ao terminar um texto, você verá uma mensagem com a pontuação final.</p>
+			</div>
+
 			<div id="caixaDeTexto">
 				<p id="digitando">
 					ha uma casa na beira do rio que tem sete salas em cada sala tem quatro
